Homework #8 v.4 (example 320px)

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!-- Унікальний контент сторінки -->
     <main class="main">
-        <div class="hero-background">
+        <!-- <div class="hero-background"> -->
         <section class="hero section">
             <div class="container">
         <!-- Назва HERO -->  
@@ -113,7 +113,7 @@
             <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
             </div>
         </section>
-        </div>    
+        <!-- </div>     -->
 
         <section class="section">
             <!-- Наші переваги -->  
