--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
                     </button>
               
                     <ul class="mobile-menu">
-                        <li class="mobile__item"><a href="./index.html" class="mobile__link link">Студія</a></li>
-                        <li class="mobile__item"><a href="./portfolio.html" class="mobile__link nav__link">Портфоліо</a></li>
+                        <li class="mobile__item"><a href="./index.html" class="mobile__link nav__link">Студія</a></li>
+                        <li class="mobile__item"><a href="./portfolio.html" class="mobile__link link">Портфоліо</a></li>
                         <li class="mobile__item"><a href="/Контакти" class="mobile__link nav__link">Контакти</a></li>
                     </ul>
             
