--- a/portfolio.html
+++ b/portfolio.html
@@ -43,14 +43,14 @@
             </nav>
             <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
             <svg width="40" height="40" aria-label="Перемикач мобільного меню">
-                <use class="icon-menu" href="/images/icons.svg#icon-menu_burger"></use>
+                <use class="icon-menu" href="./images/icons.svg#icon-menu_burger"></use>
             </svg>
             </button>
                 <!-- Мобільне меню -->
                 <div class="menu-container js-menu-container" id="mobile-menu">
                     <button class="menu-toggle js-close-menu">
                     <svg width="24" height="16" aria-label="Перемикач мобільного меню">
-                        <use class="icon-close" href="/images/icons.svg#icon-close_burger"></use>
+                        <use class="icon-close" href="./images/icons.svg#icon-close_burger"></use>
                     </svg>
                     </button>
               
@@ -60,13 +60,13 @@
                         <li class="mobile__item"><a href="/Контакти" class="mobile__link nav__link">Контакти</a></li>
                     </ul>
             
-                    <div class="mobile__contacts">
-                        <ul class="tel-mail">
+                    <div class="contacts">
+                        <ul class="mobile__contacts">
                             <li>
-                                <a href="tel:+380961111111" class="mobile__tel">+38 096 111 11 11</a>
+                                <a href="tel:+380961111111" class="mobile__item mobile__tel">+38 096 111 11 11</a>
                             </li>
                             <li>
-                                <a href="mailto:info@devstudio.com" class="mobile__mail">info@devstudio.com</a>
+                                <a href="mailto:info@devstudio.com" class="mobile__item mobile__mail">info@devstudio.com</a>
                             </li>
                         </ul>       
                     </div>
@@ -126,9 +126,6 @@
                     <button type="button" class="button button__portfolio">Маркетинг</button>
                 </li>
             </ul>
-            <!-- </div>
-
-            <div class="container">    -->
     <!-- Проекти -->
             <ul class="projects">
                 <li class="projects__item">
