--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="burger">
             <nav class="nav">
-            <a href="/"><span class="web">Web</span><span class="header__studio">Studio</span></a>
+            <a href="./"><span class="web">Web</span><span class="header__studio">Studio</span></a>
             <!-- Навігація на інші сторінки -->
             <ul class="nav__list">
                 <li class="nav__item"><a href="./index.html" class="link">Студія</a></li>
@@ -43,30 +43,30 @@
             </nav>
             <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
             <svg width="24" height="16" aria-label="Перемикач мобільного меню">
-                <use class="icon-menu" href="/images/icons.svg#icon-menu_burger"></use>
+                <use class="icon-menu" href="./images/icons.svg#icon-menu_burger"></use>
             </svg>
             </button>
             <!-- Мобільне меню -->
             <div class="menu-container js-menu-container" id="mobile-menu">
                 <button class="menu-toggle js-close-menu">
                     <svg width="24" height="16" aria-label="Перемикач мобільного меню">
-                        <use class="icon-close" href="/images/icons.svg#icon-close_burger"></use>
+                        <use class="icon-close" href="./images/icons.svg#icon-close_burger"></use>
                     </svg>
                 </button>
   
-                <ul class="mobile-menu">
+                <ul class="mobile__menu">
                     <li class="mobile__item"><a href="./index.html" class="mobile__link link">Студія</a></li>
                     <li class="mobile__item"><a href="./portfolio.html" class="mobile__link nav__link">Портфоліо</a></li>
                     <li class="mobile__item"><a href="/Контакти" class="mobile__link nav__link">Контакти</a></li>
                 </ul>
 
-                <div class="mobile__contacts">
-                    <ul class="tel-mail">
+                <div class="contacts">
+                    <ul class="mobile__contacts">
                         <li>
-                            <a href="tel:+380961111111" class="mobile__tel">+38 096 111 11 11</a>
+                            <a href="tel:+380961111111" class="mobile__item mobile__tel">+38 096 111 11 11</a>
                         </li>
                         <li>
-                            <a href="mailto:info@devstudio.com" class="mobile__mail">info@devstudio.com</a>
+                            <a href="mailto:info@devstudio.com" class="mobile__item mobile__mail">info@devstudio.com</a>
                         </li>
                     </ul>       
                 </div>
