--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <!-- Унікальний контент сторінки -->
     <main class="main">
         <!-- <div class="hero-background"> -->
-        <section class="hero section">
-            <div class="container">
+        <section class="hero sectio">
+            <div class="container hero__content">
         <!-- Назва HERO -->  
             <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
@@ -121,38 +121,38 @@
             <h2 class="visually-hidden secondary-title title-name">Наші переваги</h2>    
             <ul class="advantage">    
                 <li class="advantage__name">
-                    <button class="advantage__button">
+                    <div class="advantage__cards">
                         <svg class="advantage__icon">
                             <use href="./images/icons.svg#icon-antenna-1"></use>
                         </svg>
-                    </button>    
+                    </div>    
                     <h3 class="advantage__title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="advantage__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li class="advantage__name">   
-                    <button class="advantage__button">
+                    <div class="advantage__cards">
                         <svg class="advantage__icon">
                             <use href="./images/icons.svg#icon-clock-1"></use>
                         </svg>
-                    </button>
+                    </div>
                     <h3 class="advantage__title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="advantage__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li class="advantage__name">   
-                    <button class="advantage__button">
+                    <div class="advantage__cards">
                         <svg class="advantage__icon">
                             <use href="./images/icons.svg#icon-diagram-1"></use>
                         </svg>
-                    </button>
+                    </div>
                     <h3 class="advantage__title">ПЛАНУВАННЯ</h3>
                     <p class="advantage__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li class="advantage__name">
-                    <button class="advantage__button">
+                    <div class="advantage__cards">
                         <svg class="advantage__icon">
                             <use href="./images/icons.svg#icon-astronaut-1"></use>
                         </svg>
-                    </button>
+                    </div>
                     <h3 class="advantage__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="advantage__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
@@ -439,43 +439,43 @@
             </div>
         </section>
 
-        <section>
+        <section class="section">
             <!-- Постійні кліенти -->
             <div class="container">
-            <h2 class="secondary-title regular-clients">Постійні кліенти</h2>
+            <h2 class="secondary-title regular-clients">Постійні клієнти</h2>
             <ul class="clients our-clients">
                 <li class="clients__name"> <a href="" class="client__link">
-                    <svg class="clients__icon">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-llc-1"></use>
                     </svg>     
                     </a>
                 </li>
                 <li class="clients__name"> <a href="" class="client__link">
-                    <svg class="clients__icon">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-llc-2"></use>
                     </svg>  
                     </a>
                 </li>
                 <li class="clients__name"> <a href="" class="client__link">
-                    <svg class="clients__icon">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-llc-3"></use>
                     </svg>  
                     </a>
                 </li>
                 <li class="clients__name"> <a href="" class="client__link">
-                    <svg class="clients__icon">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-llc-4"></use>
                     </svg>  
                     </a>
                 </li>
                 <li class="clients__name"> <a href="" class="client__link">
-                    <svg class="clients__icon">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-llc-5"></use>
                     </svg>  
                     </a>
                 </li>
                 <li class="clients__name"> <a href="" class="client__link">
-                    <svg class="clients__icon">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/icons.svg#icon-llc-6"></use>
                     </svg>  
                     </a>
