--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         media="(min-width: 480px)"
                         srcset="./images/team/img-1_450@1x.jpg 1x, ./images/team/img-1_900@2x.jpg 2x"
                         type="image/jpg">
-                    <img src= " ./images/team/img-1_450@1x.jpg" alt= "Співробітник Ігор" loading="lazy"/>
+                    <img src= "./images/team/img-1_450@1x.jpg" alt= "Співробітник Ігор" class="team__image" loading="lazy"/>
                     </picture>
                     <p class="team__name">Ігор Дем'яненко</p>
                     <p class="team__position">Product Designer</p>
@@ -285,7 +285,7 @@
                         media="(min-width: 480px)"
                         srcset="./images/team/img-2_450@1x.jpg 1x, ./images/team/img-2_900@2x.jpg 2x"
                         type="image/jpg">
-                    <img src= "./images/team/img-2_450@1x.jpg" alt= "Співробітник Ольга" loading="lazy"/>
+                    <img src= "./images/team/img-2_450@1x.jpg" alt= "Співробітник Ольга" class="team__image" loading="lazy"/>
                     <p class="team__name">Ольга Рєпіна</p>
                     <p class="team__position">Frontend Developer</p>
                     </picture>
@@ -344,7 +344,7 @@
                         media="(min-width: 480px)"
                         srcset="./images/team/img-3_450@1x.jpg 1x, ./images/team/img-3_900@2x.jpg 2x"
                         type="image/jpg">
-                    <img src= "./images/team/img-3_450@1x.jpg" alt= "Співробітник Микола" loading="lazy"/>
+                    <img src= "./images/team/img-3_450@1x.jpg" alt= "Співробітник Микола" class="team__image" loading="lazy"/>
                     <p class="team__name">Микола Тарасов</p>
                     <p class="team__position">Marketing</p>
                     </picture>
@@ -403,7 +403,7 @@
                         media="(min-width: 480px)"
                         srcset="./images/team/img-4_450@1x.jpg 1x, ./images/team/img-4_900@2x.jpg 2x"
                         type="image/jpg">
-                    <img src= "./images/team/img-4_450@1x.jpg" alt= "Співробітник Михайло" loading="lazy"/>
+                    <img src= "./images/team/img-4_450@1x.jpg" alt= "Співробітник Михайло" class="team__image" loading="lazy"/>
                     <p class="team__name">Михайло Єрмаков</p>
                     <p class="team__position">UI Designer</p>
                     </picture>
@@ -607,8 +607,6 @@
             </button>
         </div>
     </div>
-
-   
 
     <script src="./js/modal.js"></script>
 
