--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-1_450@1x.jpg 1x, ./images/projects/img-1_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-1_450@1x.jpg" alt="Екран ноутбука" loading="lazy">
+                                <img src="./images/projects/img-1_450@1x.jpg" alt="Екран ноутбука" class="project__image" loading="lazy">
                                 </picture>    
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -187,7 +187,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-2_450@1x.jpg 1x, ./images/projects/img-2_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-2_450@1x.jpg" alt="Два баскетболіста" loading="lazy">
+                                <img src="./images/projects/img-2_450@1x.jpg" alt="Два баскетболіста" class="project__image" loading="lazy">
                                 </picture>    
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -223,7 +223,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-3_450@1x.jpg 1x, ./images/projects/img-3_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-3_450@1x.jpg" alt="Логотип ресторана" loading="lazy">
+                                <img src="./images/projects/img-3_450@1x.jpg" alt="Логотип ресторана" class="project__image" loading="lazy">
                                 </picture>    
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -259,7 +259,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-4_450@1x.jpg 1x, ./images/projects/img-4_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-4_450@1x.jpg" alt="Навушники" loading="lazy">
+                                <img src="./images/projects/img-4_450@1x.jpg" alt="Навушники" class="project__image" loading="lazy">
                                 </picture>
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -295,7 +295,7 @@
                                 <source media="(min-width: 480px)"                                        
                                         srcset="./images/projects/img-5_450@1x.jpg 1x, ./images/projects/img-5_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-5_450@1x.jpg" alt="Дві коробки" loading="lazy">
+                                <img src="./images/projects/img-5_450@1x.jpg" alt="Дві коробки" class="project__image" loading="lazy">
                                 </picture>
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -331,7 +331,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-6_450@1x.jpg 1x, ./images/projects/img-6_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-6_450@1x.jpg" alt="Екран монітора" loading="lazy">
+                                <img src="./images/projects/img-6_450@1x.jpg" alt="Екран монітора" class="project__image" loading="lazy">
                                 </picture>
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -367,7 +367,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-7_450@1x.jpg 1x, ./images/projects/img-7_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-7_450@1x.jpg" alt="Розкрита книга" loading="lazy">
+                                <img src="./images/projects/img-7_450@1x.jpg" alt="Розкрита книга" class="project__image" loading="lazy">
                                 </picture>
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -403,7 +403,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-_450@1x.jpg 1x, ./images/projects/img-8_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-8_450@1x.jpg" alt="Бірка на мотузці" loading="lazy">
+                                <img src="./images/projects/img-8_450@1x.jpg" alt="Бірка на мотузці" class="project__image" loading="lazy">
                                 </picture>
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -439,7 +439,7 @@
                                 <source media="(min-width: 480px)"
                                         srcset="./images/projects/img-9_450@1x.jpg 1x, ./images/projects/img-9_900@2x.jpg 2x"
                                         type="image/jpg">
-                                <img src="./images/projects/img-9_450@1x.jpg" alt="Руки на клавіатурі ноутбука" loading="lazy">
+                                <img src="./images/projects/img-9_450@1x.jpg" alt="Руки на клавіатурі ноутбука" class="project__image" loading="lazy">
                                 </picture>
                                     <div class="overlay">
                                         <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
